# palinex

./: .gitignore  A2UI-V09-DIVERGENCE.md  AGENTS.md  CHANGELOG.md  README.md  cv1apl4kqupjucuah3oiaujdmqkeepuc  host-bridge.html  index.html  inspector.html  jtidtkiss4lktmeau4dndgumpshici5d.darc  manifest  producer.py  pyproject.toml
.beads/: metadata.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture-sequence.md
docs/protocols/: postmessage-rpc.md
docs/rdr/: README.md  rdr-001-architecture.md  rdr-002-pyodide-as-runtime-augmentation.md  rdr-003-plugin-and-source-layout.md  rdr-004-trust-gate-signature.md
mcpb/: .gitignore  .mcpbignore  manifest.json  pyproject.toml
mcpb/src/: server.py
palinex/: __init__.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: palinex-render.md
plugin/skills/palinex-overview/: SKILL.md
plugin/skills/surface-emission/: SKILL.md
scripts/: install-hooks.sh
src/palinex/: __init__.py  nexus_bridge.py  signing.py
src/palinex/mcp/: __init__.py  __main__.py  server.py
tests/: test_builders.py  test_host_bridge.py  test_mcp_server.py  test_nexus_bridge.py  test_plugin_structure.py  test_protocol_spec.py  test_rdr_004_structure.py  test_renderer_dispatch.py  test_signing.py  test_trust_gate.py
web/: host-bridge.html  index.html  inspector.html  trust-gate.html
