[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palinex"
version = "0.2.0"
description = "Typed Python builders + single-file HTML renderer for a2ui v0.9 surfaces. palin- (again) + nexus (bond) — surfaces get rewritten."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hal Hildebrand", email = "hellblazer@me.com" },
]
keywords = ["a2ui", "ui", "agent", "rendering", "surface", "declarative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
validate = ["jsonschema>=4"]
# [nexus] enables the nexus integration shim (chash resolver, HTTP sidecar's
# nexus-backed endpoints). nexus ships on PyPI as `conexus`; the import name
# is `nexus`. Pinned >=4.34 because that's where the catalog + T3 APIs we
# use have settled.
nexus = ["conexus>=4.34"]
# [mcp] enables the FastMCP server entry point (python -m palinex.mcp). The
# server itself is small (~80 LOC); fastmcp is the runtime dep that does the
# heavy lifting.
mcp = ["mcp>=1.0"]
# [all] is the kitchen-sink install — most users wanting the full plugin +
# sidecar experience pick this.
all = ["palinex[validate,nexus,mcp]"]

[dependency-groups]
dev = ["pytest>=8", "jsonschema>=4", "mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/Hellblazer/palinex"
Repository = "https://github.com/Hellblazer/palinex"
Renderer = "https://hellblazer.github.io/palinex/"
Issues = "https://github.com/Hellblazer/palinex/issues"

[project.scripts]
# `palinex-mcp` runs the FastMCP server over stdio. The Claude Code plugin's
# .mcp.json references this name directly; users install palinex (with the
# [mcp] extra) and the script lands on $PATH.
palinex-mcp = "palinex.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/palinex"]

[tool.hatch.build.targets.sdist]
include = [
    "src/palinex/",
    "web/",
    "plugin/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "CHANGELOG.md",
    "AGENTS.md",
    "A2UI-V09-DIVERGENCE.md",
]

[tool.pytest.ini_options]
# src-layout: tests find palinex via ./src/palinex without needing an
# editable install or per-call PYTHONPATH=. Hooks (.githooks/{pre-commit,
# pre-push}) and CI both rely on this picking up the package.
pythonpath = ["src"]
testpaths = ["tests"]
